Closed
Bug 1650562
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::dom::BrowsingContext::GetParent]
Categories
(Core :: DOM: Navigation, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox78 | --- | unaffected |
firefox79 | --- | unaffected |
firefox80 | --- | fixed |
People
(Reporter: johnp, Assigned: kmag)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-4682c48f-7c7e-4957-b1c8-affcf0200704. No STR (couldn't reproduce, but there's similar crash reports on Soccoro on Windows & macOS).
Top 10 frames of crashing thread:
0 libxul.so mozilla::dom::BrowsingContext::GetParent const docshell/base/BrowsingContext.cpp:105
1 libxul.so nsContentUtils::CheckForSubFrameDrop dom/base/nsContentUtils.cpp
2 libxul.so nsContentUtils::SetDataTransferInEvent dom/base/nsContentUtils.cpp:5484
3 libxul.so mozilla::dom::DragEvent::GetDataTransfer dom/events/DragEvent.cpp:65
4 libxul.so mozilla::dom::DragEvent_Binding::get_dataTransfer dom/bindings/DragEventBinding.cpp:156
5 libxul.so bool mozilla::dom::binding_detail::GenericGetter<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3101
6 libxul.so js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:576
7 libxul.so JS::Call js/src/jsapi.cpp:2846
8 libxul.so xpc::XrayWrapper<js::CrossCompartmentWrapper, xpc::DOMXrayTraits>::get const js/xpconnect/wrappers/XrayWrapper.cpp:2101
9 libxul.so js::Proxy::get js/src/proxy/Proxy.cpp:339
Updated•5 years ago
|
Component: DOM: Core & HTML → DOM: Navigation
Comment 1•5 years ago
|
||
Crash from null BrowsingContext.
Assigning to kmag
Tracking for Fission M6b unless this crash signature spikes to affect a lot of users.
Assignee: nobody → kmaglione+bmo
Severity: -- → S3
Fission Milestone: --- → M6b
Priority: -- → P3
Updated•5 years ago
|
Has Regression Range: --- → yes
![]() |
Assignee | |
Comment 2•5 years ago
|
||
Comment 3•5 years ago
|
||
Set release status flags based on info from the regressing bug 1646513
status-firefox78:
--- → unaffected
status-firefox79:
--- → unaffected
status-firefox80:
--- → affected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Updated•5 years ago
|
Keywords: regression
Pushed by maglione.k@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/b24625796fef
Add missing null check for document BrowsingContext. r=nika
Comment 5•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in
before you can comment on or make changes to this bug.
Description
•