Bug 1650562: Add missing null check for document BrowsingContext. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D82988